# HaskellToybox

./: .gitignore  README.md
Dithering/: CHANGELOG.md  Dithering.cabal
Dithering/app/: Colourspace.hs  Dither.hs  Main.hs
KHInsiderGetter/: CHANGELOG.md  KHInsiderGetter.cabal
KHInsiderGetter/app/: Main.hs
