cabal-version:      3.0
name:               Dithering
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             E. G. Bland
maintainer:         liz@flompy.zone
-- copyright:
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Dithering
    import:           warnings
    main-is:          Main.hs
    other-modules:    Colourspace, Dither
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, JuicyPixels
    hs-source-dirs:   app
    default-language: Haskell2010
